# current-local-time

./: .gitignore  README.md
c/: CMakeLists.txt  main.c
c#/: .gitignore  current-time.sln
c#/current-time/: CurrentTime.cs  current-time.csproj
c++/: CMakeLists.txt  main.cpp
c++/src/: main.cpp
c/src/: main.c
go/: .gitignore  current-time.go  go.mod
java/: build.gradle.kts  settings.gradle.kts
java/src/: CurrentTime.java
js/: current-time.js
php/: current-time.php
python/: current-time.py
rust/: .gitignore  Cargo.toml
rust/src/: main.rs
